Add wrapper command
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=22216

--- a/new.plone.org/osx.cfg
+++ b/new.plone.org/osx.cfg
@@ -2,17 +2,21 @@
 #
 #  ./bin/buildout -c osx.cfg
 #
-# This will download and buildout libxml2 and libxslt. To start the server,
-# do:
+# This will download and buildout libxml2 and libxslt, and build lxml against
+# this version. To start the server, do:
 #
-#  DYLD_LIBRARY_PATH=./parts/lxml/lib ./bin/paster serve server.ini
+#  ./bin/run-deliverance
 #
-# This ensures that the newly compiled versions if libxml2 and libxslt are
-# used.
+# This is a wrapper script that is equivalent to doing:
+#
+#  DYLD_LIBRARY_PATH=./parts/libxml2/lib:./parts/libxslt/lib ./bin/paster serve --reload server.ini
+#
+# This is necessary to ensure that the newly compiled versions if libxml2 and
+# libxslt are used.
 
 [buildout]
 extends = buildout.cfg
-parts = libxml2 libxslt lxml server
+parts = libxml2 libxslt lxml server wrapper
 
 [libxml2]
 recipe = zc.recipe.cmmi
@@ -39,3 +43,11 @@ library-dirs = ${libxml2:location}/lib
 rpath = ${libxml2:location}/lib
          ${libxslt:location}/lib
 environment = lxml-environment
+
+[wrapper]
+recipe = iw.recipe.cmd
+on_install = true
+cmds = 
+    echo "#!/bin/sh" > bin/run-deliverance
+    echo "DYLD_LIBRARY_PATH=parts/libxml2/lib:parts/libxslt/lib ./bin/paster serve --reload server.ini" >> bin/run-deliverance
+    chmod +x bin/run-deliverance
