Set static prefix
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=22331

--- a/new.plone.org/server.ini
+++ b/new.plone.org/server.ini
@@ -44,6 +44,7 @@ use = egg:dv.xdvserver#xdv
 theme_uri = file://%(here)s/static/index.html
 rules = %(here)s/static/rules/default.xml
 live = True
+absolute_prefix = /static
 
 [app:zope.default]
 use = egg:Paste#proxy
@@ -63,6 +64,7 @@ use = egg:dv.xdvserver#xdv
 theme_uri = file://%(here)s/static/documentation.html
 rules = %(here)s/static/rules/default.xml
 live = True
+absolute_prefix = /static
 
 [app:zope.documentation]
 use = egg:Paste#proxy
