Adding Trac support.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23242

--- a/new.plone.org/server.ini
+++ b/new.plone.org/server.ini
@@ -21,6 +21,7 @@ use = egg:Paste#urlmap
 /static = static
 / = default
 /documentation = documentation
+/development = development
 
 #
 # Static - mapped to /static
@@ -41,7 +42,7 @@ pipeline = egg:Paste#httpexceptions
 
 [filter:theme.default]
 use = egg:dv.xdvserver#xdv
-theme_uri = file://%(here)s/static/index.html
+theme_uri = file://%(here)s/static/plone.html
 rules = %(here)s/static/rules/default.xml
 live = True
 absolute_prefix = /static
@@ -69,3 +70,23 @@ absolute_prefix = /static
 [app:zope.documentation]
 use = egg:Paste#proxy
 address = http://localhost:8080/VirtualHostBase/http/localhost:5000/demo/VirtualHostRoot/documentation/
+
+#
+# Trac proxy - mapped to /development
+#
+
+[pipeline:development]
+pipeline = egg:Paste#httpexceptions
+           theme.development
+           zope.development
+
+[filter:theme.development]
+use = egg:dv.xdvserver#xdv
+theme_uri = file://%(here)s/static/trac.html
+rules = %(here)s/static/rules/trac.xml
+live = True
+absolute_prefix = /static
+
+[app:zope.development]
+use = egg:Paste#proxy
+address = http://dev.plone.org/plone
