Mapping the static files to the new location
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23248

--- a/new.plone.org/server.ini
+++ b/new.plone.org/server.ini
@@ -62,7 +62,7 @@ pipeline = egg:Paste#httpexceptions
 
 [filter:theme.documentation]
 use = egg:dv.xdvserver#xdv
-theme_uri = file://%(here)s/static/documentation.html
+theme_uri = file://%(here)s/static/originals/documentation.html
 rules = %(here)s/static/rules/default.xml
 live = True
 absolute_prefix = /static
