--- a/new.plone.org/buildout.cfg
+++ b/new.plone.org/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = lxml server
+parts = lxml server nginx-build main buildxsl
 develop = src/dv.xdvserver
 versions = versions
 
@@ -19,3 +19,78 @@ eggs =
     PasteScript
 scripts = paster
 interpreter = py
+
+[nginx-build]
+recipe = zc.recipe.cmmi
+url = http://sysoev.ru/nginx/nginx-0.7.30.tar.gz
+patch = ${buildout:directory}/nginx-xslt.patch
+patch_options = -p0
+extra_options =
+    --with-http_xslt_module
+    --with-cc-opt="-I ${buildout:directory}/parts/libxslt/include/libxslt -I ${buildout:directory}/parts/libxml2/include/libxml2"
+#    --with-ld-opt="-L${buildout:directory}/parts/libxslt/lib -L${buildout:directory}/parts/libxml2/lib"
+
+# --with-debug --with-cc-opt="-O0" helps debugging with gdb.
+# seems that the ld options are being ignored on mac os x
+
+[main]
+recipe = gocept.nginx
+nginx = nginx-build
+configuration = 
+    worker_processes 4;
+    daemon on;
+    error_log ${buildout:directory}/parts/main/error.log debug;
+    events {
+        worker_connections 1024;
+    }
+    http {
+        include    mime.types;
+        #include    /etc/nginx/proxy.conf;
+        # Proxy to Varnish cache
+        upstream cache {
+            server 82.94.219.235:80;
+        }
+   
+        # Main server goes upstream to Varnish
+        server {
+            listen 8000; # change this to 80 when proxying plone.org (you must then start with sudo)
+            server_name localhost;
+            location ^~ /images/ {
+                autoindex on;
+                root ${buildout:directory}/static; 
+            }
+            location ^~ /plone.css {
+                root ${buildout:directory}/static;
+            }
+            location ^~ /ie.css {
+                root ${buildout:directory}/static;
+            }
+       
+            location / {
+                xslt_stylesheet ${buildout:directory}/parts/main/default.xsl;
+                xslt_html_parser on;
+                xslt_types text/html;
+                
+                # comment out this line when proxying plone.org
+                root ${buildout:directory}/static;
+                
+                # uncomment the following lines when proxying plone.org
+                #proxy_pass http://82.94.219.235:80;
+                #proxy_set_header Host $http_host;
+                #proxy_set_header Accept-Encoding '';
+            }
+        }
+   
+   
+    }
+
+
+[buildxsl]
+recipe = plone.recipe.command
+command =
+    ${buildout:directory}/parts/libxslt/bin/xsltproc --html --nonet \
+	--stringparam boilerplateurl ${buildout:directory}/src/dv.xdvserver/dv/xdvserver/compiler/boilerplate.xsl \
+	--stringparam rulesuri ${buildout:directory}/static/rules/default.xml src/dv.xdvserver/dv/xdvserver/compiler/compiler.xsl \
+	${buildout:directory}/static/plone.html > ${buildout:directory}/parts/main/default.xsl
+	
+update-command = ${buildxsl:command}
