update nginx patches with with libxml2/libxslt location configurability
svn path=/new.plone.org/trunk/; revision=24296

--- a/new.plone.org/buildout.cfg
+++ b/new.plone.org/buildout.cfg
@@ -21,17 +21,20 @@ scripts = paster
 interpreter = py
 
 [nginx-build]
-recipe = zc.recipe.cmmi
+recipe = hexagonit.recipe.cmmi
 url = http://sysoev.ru/nginx/nginx-0.7.30.tar.gz
-patch = ${buildout:directory}/nginx-xslt.patch
-patch_options = -p0
-extra_options =
+patches =
+    ${buildout:directory}/patches/nginx-xslt.patch
+    ${buildout:directory}/patches/nginx-xslt-options.patch
+    ${buildout:directory}/patches/nginx-xslt-conf.patch
+configure-options =
     --with-http_xslt_module
-    --with-cc-opt="-I ${buildout:directory}/parts/libxslt/include/libxslt -I ${buildout:directory}/parts/libxml2/include/libxml2"
-#    --with-ld-opt="-L${buildout:directory}/parts/libxslt/lib -L${buildout:directory}/parts/libxml2/lib"
+    --with-libxml2=${buildout:directory}/parts/libxml2
+    --with-libxslt=${buildout:directory}/parts/libxslt
 
 # --with-debug --with-cc-opt="-O0" helps debugging with gdb.
-# seems that the ld options are being ignored on mac os x
+# Note that as lxml is build statically in mac os x it still links with libs
+# in /opt/local/lib
 
 [main]
 recipe = gocept.nginx
