update with plone.org proxying settings
svn path=/new.plone.org/trunk/; revision=24303

--- a/new.plone.org/buildout.cfg
+++ b/new.plone.org/buildout.cfg
@@ -32,7 +32,9 @@ configure-options =
     --with-libxml2=${buildout:directory}/parts/libxml2
     --with-libxslt=${buildout:directory}/parts/libxslt
 
-# --with-debug --with-cc-opt="-O0" helps debugging with gdb.
+#    --with-ld-opt="-R${buildout:directory}/parts/libxml2/lib -R${buildout:directory}/parts/libxslt/lib"
+#    --with-debug --with-cc-opt="-O0" # helps debugging with gdb.
+
 # Note that as lxml is build statically in mac os x it still links with libs
 # in /opt/local/lib
 
@@ -40,7 +42,7 @@ configure-options =
 recipe = gocept.nginx
 nginx = nginx-build
 configuration = 
-    worker_processes 4;
+    worker_processes 1;
     daemon on;
     error_log ${buildout:directory}/parts/main/error.log debug;
     events {
@@ -51,36 +53,39 @@ configuration =
         #include    /etc/nginx/proxy.conf;
         # Proxy to Varnish cache
         upstream cache {
-            server 82.94.219.235:80;
+            server 127.0.0.1:6081;
         }
    
         # Main server goes upstream to Varnish
         server {
-            listen 8000; # change this to 80 when proxying plone.org (you must then start with sudo)
+            listen 5500;
             server_name localhost;
+            root ${buildout:directory}/static; 
+
             location ^~ /images/ {
                 autoindex on;
-                root ${buildout:directory}/static; 
             }
-            location ^~ /plone.css {
-                root ${buildout:directory}/static;
-            }
-            location ^~ /ie.css {
-                root ${buildout:directory}/static;
-            }
-       
-            location / {
+            location ^~ /plone.css {  }
+            location ^~ /ie.css {  }
+            location ^~ /development.html {
                 xslt_stylesheet ${buildout:directory}/parts/main/default.xsl;
                 xslt_html_parser on;
                 xslt_types text/html;
-                
-                # comment out this line when proxying plone.org
-                root ${buildout:directory}/static;
-                
-                # uncomment the following lines when proxying plone.org
-                #proxy_pass http://82.94.219.235:80;
-                #proxy_set_header Host $http_host;
-                #proxy_set_header Accept-Encoding '';
+            }
+            location / {
+                rewrite ^/(.*)$ /VirtualHostBase/http/$host:5500/plone.org/VirtualHostRoot/$1;
+            }
+
+            location /VirtualHostBase/ {
+                proxy_pass http://127.0.0.1:8001;
+                proxy_set_header Host $http_host;
+                proxy_read_timeout 185;
+ 
+                xslt_stylesheet ${buildout:directory}/parts/main/default.xsl;
+                xslt_html_parser on;
+                xslt_types text/html;
+
+                proxy_set_header Accept-Encoding '';
             }
         }
    
