--- a/new.plone.org/buildout.cfg
+++ b/new.plone.org/buildout.cfg
@@ -31,9 +31,10 @@ configure-options =
     --with-http_xslt_module
     --with-libxml2=${buildout:directory}/parts/libxml2
     --with-libxslt=${buildout:directory}/parts/libxslt
+    --with-debug --with-cc-opt="-O0" # helps debugging with gdb.
 
 #    --with-ld-opt="-R${buildout:directory}/parts/libxml2/lib -R${buildout:directory}/parts/libxslt/lib"
-#    --with-debug --with-cc-opt="-O0" # helps debugging with gdb.
+#    
 
 # Note that as lxml is build statically in mac os x it still links with libs
 # in /opt/local/lib
@@ -50,11 +51,6 @@ configuration =
     }
     http {
         include    mime.types;
-        #include    /etc/nginx/proxy.conf;
-        # Proxy to Varnish cache
-        upstream cache {
-            server 127.0.0.1:6081;
-        }
    
         # Main server goes upstream to Varnish
         server {
@@ -72,13 +68,17 @@ configuration =
                 xslt_html_parser on;
                 xslt_types text/html;
             }
-            location / {
-                rewrite ^/(.*)$ /VirtualHostBase/http/$host:5500/plone.org/VirtualHostRoot/$1;
-            }
 
-            location /VirtualHostBase/ {
-                proxy_pass http://127.0.0.1:8001;
-                proxy_set_header Host $http_host;
+            location ~ /emptypage$ {
+                rewrite ^/(.*)$ /VirtualHostBase/http/localhost:5500/site/VirtualHostRoot/$1 break;
+                proxy_pass http://127.0.0.1:8080;
+                # proxy_set_header Host $http_host;
+                proxy_read_timeout 185;
+                proxy_set_header Accept-Encoding '';
+            }
+            location / {
+                proxy_pass http://127.0.0.1:8080/VirtualHostBase/http/localhost:5500/site/VirtualHostRoot/;
+                # proxy_set_header Host $http_host;
                 proxy_read_timeout 185;
  
                 xslt_stylesheet ${buildout:directory}/parts/main/default.xsl;
