use the xdv extraurl param for extra templates
svn path=/new.plone.org/trunk/; revision=24446

--- a/new.plone.org/buildout.cfg
+++ b/new.plone.org/buildout.cfg
@@ -98,7 +98,9 @@ recipe = plone.recipe.command
 command =
     ${buildout:directory}/parts/libxslt/bin/xsltproc --html --nonet \
 	--stringparam boilerplateurl ${buildout:directory}/src/dv.xdvserver/dv/xdvserver/compiler/boilerplate.xsl \
-	--stringparam rulesuri ${buildout:directory}/static/rules/default.xml src/dv.xdvserver/dv/xdvserver/compiler/compiler.xsl \
-	${buildout:directory}/static/plone.html > ${buildout:directory}/parts/main/default.xsl
+	--stringparam rulesuri ${buildout:directory}/static/rules/default.xml \
+	--stringparam extraurl ${buildout:directory}/static/rules/default-extra.xsl \
+	src/dv.xdvserver/dv/xdvserver/compiler/compiler.xsl ${buildout:directory}/static/plone.html \
+	> ${buildout:directory}/parts/main/default.xsl
 	
 update-command = ${buildxsl:command}
