ignore verification of apache module checkouts
svn path=/new.plone.org/trunk/; revision=25223

--- a/new.plone.org/apache.cfg
+++ b/new.plone.org/apache.cfg
@@ -20,6 +20,7 @@ recipe = infrae.subversion
 urls =
     http://svn.outoforder.cc/svn/mod_depends/trunk@7 mod_depends
     http://svn.outoforder.cc/svn/mod_transform/trunk@92 mod_transform
+ignore_verification = true
 
 [autogen]
 recipe = iw.recipe.cmd
