new.plone.org config
svn path=/new.plone.org/trunk/; revision=25905

--- a/new.plone.org/buildout.cfg
+++ b/new.plone.org/buildout.cfg
@@ -1,14 +1,19 @@
+# This is the dv.xdvserver buildout.
+# See nginx.cfg and apache.cfg for their configs
+
 [buildout]
-parts = lxml server nginx-build main buildxsl
-develop = src/dv.xdvserver
+parts =
+    lxml
+    server
 versions = versions
+newest = false
 
 [versions]
-lxml = 2.1.2
+lxml = 2.1.5
 
 [lxml]
 recipe = z3c.recipe.staticlxml
-egg = lxml == 2.1.2
+egg = lxml == 2.1.5
 force = false
 
 [server]
@@ -19,88 +24,3 @@ eggs =
     PasteScript
 scripts = paster
 interpreter = py
-
-[nginx-build]
-recipe = hexagonit.recipe.cmmi
-url = http://sysoev.ru/nginx/nginx-0.7.30.tar.gz
-patches =
-    ${buildout:directory}/patches/nginx-xslt.patch
-    ${buildout:directory}/patches/nginx-xslt-options.patch
-    ${buildout:directory}/patches/nginx-xslt-conf.patch
-configure-options =
-    --with-http_xslt_module
-    --with-libxml2=${buildout:directory}/parts/libxml2
-    --with-libxslt=${buildout:directory}/parts/libxslt
-    --with-debug --with-cc-opt="-O0" # helps debugging with gdb.
-
-#    --with-ld-opt="-R${buildout:directory}/parts/libxml2/lib -R${buildout:directory}/parts/libxslt/lib"
-#    
-
-# Note that as lxml is build statically in mac os x it still links with libs
-# in /opt/local/lib
-
-[main]
-recipe = gocept.nginx
-nginx = nginx-build
-configuration = 
-    worker_processes 1;
-    daemon on;
-    error_log ${buildout:directory}/parts/main/error.log debug;
-    events {
-        worker_connections 1024;
-    }
-    http {
-        include    mime.types;
-   
-        # Main server goes upstream to Varnish
-        server {
-            listen 5500;
-            server_name localhost;
-            root ${buildout:directory}/static; 
-
-            location ^~ /images/ {
-                autoindex on;
-            }
-            location ^~ /plone.css {  }
-            location ^~ /ie.css {  }
-            location ^~ /development.html {
-                xslt_stylesheet ${buildout:directory}/parts/main/default.xsl;
-                xslt_html_parser on;
-                xslt_types text/html;
-            }
-
-            location ~ /emptypage$ {
-                rewrite ^/(.*)$ /VirtualHostBase/http/localhost:5500/site/VirtualHostRoot/$1 break;
-                proxy_pass http://127.0.0.1:8080;
-                # proxy_set_header Host $http_host;
-                proxy_read_timeout 185;
-                proxy_set_header Accept-Encoding '';
-            }
-            location / {
-                proxy_pass http://127.0.0.1:8080/VirtualHostBase/http/localhost:5500/site/VirtualHostRoot/;
-                # proxy_set_header Host $http_host;
-                proxy_read_timeout 185;
- 
-                xslt_stylesheet ${buildout:directory}/parts/main/default.xsl;
-                xslt_html_parser on;
-                xslt_types text/html;
-
-                proxy_set_header Accept-Encoding '';
-            }
-        }
-   
-   
-    }
-
-
-[buildxsl]
-recipe = plone.recipe.command
-command =
-    ${buildout:directory}/parts/libxslt/bin/xsltproc --html --nonet \
-	--stringparam boilerplateurl ${buildout:directory}/src/dv.xdvserver/dv/xdvserver/compiler/boilerplate.xsl \
-	--stringparam rulesuri ${buildout:directory}/static/rules/default.xml \
-	--stringparam extraurl ${buildout:directory}/static/rules/default-extra.xsl \
-	src/dv.xdvserver/dv/xdvserver/compiler/compiler.xsl ${buildout:directory}/static/plone.html \
-	> ${buildout:directory}/parts/main/default.xsl
-	
-update-command = ${buildxsl:command}
