--- a/new.plone.org/nginx.cfg
+++ b/new.plone.org/nginx.cfg
@@ -55,7 +55,8 @@ output = ${buildout:directory}/bin/nginxctl
 recipe = collective.recipe.template
 listen = 5500
 virtual-host = /VirtualHostBase/http/localhost:5500/site/VirtualHostRoot
-backend = http://127.0.0.1:8080
+#backend = http://127.0.0.1:8080
+backend = http://127.0.0.1:8001
 input = ${buildout:directory}/templates/nginx.conf.in
 output = ${buildout:directory}/etc/nginx.conf
 
@@ -68,6 +69,12 @@ command =
 	--stringparam rulesuri ${buildout:directory}/static/rules/default.xml \
 	--stringparam extraurl ${buildout:directory}/static/rules/default-extra.xsl \
 	src/dv.xdvserver/dv/xdvserver/compiler/compiler.xsl ${buildout:directory}/static/plone.html \
-	> ${buildout:directory}/etc/default.xsl
+	> ${buildout:directory}/etc/default.xsl ; \
+    ${buildout:directory}/parts/libxslt/bin/xsltproc --html --nonet \
+        --stringparam boilerplateurl ${buildout:directory}/src/dv.xdvserver/dv/xdvserver/compiler/boilerplate.xsl \
+        --stringparam rulesuri ${buildout:directory}/static/rules/default.xml \
+        --stringparam extraurl ${buildout:directory}/static/rules/default-extra.xsl \
+        src/dv.xdvserver/dv/xdvserver/compiler/compiler.xsl ${buildout:directory}/static/plone-wide.html \
+        > ${buildout:directory}/etc/wide.xsl
 	
 update-command = ${buildxsl:command}
