--- a/new.plone.org/templates/nginx.conf.in
+++ b/new.plone.org/templates/nginx.conf.in
@@ -1,4 +1,5 @@
-worker_processes 1;
+user www-data;
+worker_processes 4;
 daemon on;
 events {
     worker_connections 1024;
@@ -17,31 +18,60 @@ http {
         }
         location ^~ /plone.css {  }
         location ^~ /ie.css {  }
-        location ^~ /development.html {
-            xslt_stylesheet ${buildout:directory}/etc/default.xsl;
-            xslt_html_parser on;
-            xslt_types text/html;
-        }
-
         location ~ /emptypage$ {
             rewrite ^/(.*)$ ${nginx-conf:virtual-host}/$1 break;
             proxy_pass ${nginx-conf:backend};
-            # proxy_set_header Host $http_host;
             proxy_read_timeout 185;
             proxy_set_header Accept-Encoding '';
         }
         location / {
             proxy_pass ${nginx-conf:backend}/${nginx-conf:virtual-host}/;
-            # proxy_set_header Host $http_host;
             proxy_read_timeout 185;
-
+            proxy_set_header Accept-Encoding '';
             xslt_stylesheet ${buildout:directory}/etc/default.xsl;
             xslt_html_parser on;
             xslt_types text/html;
-
-            proxy_set_header Accept-Encoding '';
         }
+        location = / {
+            proxy_pass ${nginx-conf:backend}/${nginx-conf:virtual-host}/;
+            proxy_read_timeout 185;
+            proxy_set_header Accept-Encoding '';
+            xslt_stylesheet ${buildout:directory}/etc/wide.xsl;
+            xslt_html_parser on;
+            xslt_types text/html;
+        }
+        location = /products {
+            proxy_pass ${nginx-conf:backend}/${nginx-conf:virtual-host}/products;
+            proxy_read_timeout 185;
+            proxy_set_header Accept-Encoding '';
+            xslt_stylesheet ${buildout:directory}/etc/wide.xsl;
+            xslt_html_parser on;
+            xslt_types text/html;
+        }
+        location = /support {
+            proxy_pass ${nginx-conf:backend}/${nginx-conf:virtual-host}/support;
+            proxy_read_timeout 185;
+            proxy_set_header Accept-Encoding '';
+            xslt_stylesheet ${buildout:directory}/etc/wide.xsl;
+            xslt_html_parser on;
+            xslt_types text/html;
+        }
+        location = /new_frontpage {
+            proxy_pass ${nginx-conf:backend}/${nginx-conf:virtual-host}/new_frontpage;
+            proxy_read_timeout 185;
+            proxy_set_header Accept-Encoding '';
+            xslt_stylesheet ${buildout:directory}/etc/wide.xsl;
+            xslt_html_parser on;
+            xslt_types text/html;
+        }
+        location = /products/psc_view_ploneorg {
+            proxy_pass ${nginx-conf:backend}/${nginx-conf:virtual-host}/products/psc_view_ploneorg;
+            proxy_read_timeout 185;
+            proxy_set_header Accept-Encoding '';
+            xslt_stylesheet ${buildout:directory}/etc/wide.xsl;
+            xslt_html_parser on;
+            xslt_types text/html;
+        }
+        
     }
-
-
 }
