--- a/new.plone.org/nginx.cfg
+++ b/new.plone.org/nginx.cfg
@@ -16,6 +16,8 @@ lxml = 2.1.5
 recipe = z3c.recipe.staticlxml
 egg = lxml == 2.1.5
 force = false
+libxslt-url = ftp://xmlsoft.org/libxml2/libxslt-1.1.24.tar.gz
+libxml2-url = ftp://xmlsoft.org/libxml2/libxml2-2.7.3.tar.gz
 
 [py]
 recipe = zc.recipe.egg
@@ -54,8 +56,9 @@ output = ${buildout:directory}/bin/nginxctl
 [nginx-conf]
 recipe = collective.recipe.template
 listen = 5500
-virtual-host = /VirtualHostBase/http/localhost:5500/site/VirtualHostRoot
+#virtual-host = /VirtualHostBase/http/localhost:5500/site/VirtualHostRoot
 #backend = http://127.0.0.1:8080
+virtual-host = VirtualHostBase/http/new.plone.org:80/plone.org/VirtualHostRoot
 backend = http://127.0.0.1:8001
 input = ${buildout:directory}/templates/nginx.conf.in
 output = ${buildout:directory}/etc/nginx.conf
