--- a/new.plone.org/templates/nginx.conf.in
+++ b/new.plone.org/templates/nginx.conf.in
@@ -14,6 +14,12 @@ http {
         server_name localhost;
         root ${buildout:directory}/static; 
 
+        gzip             on;
+        gzip_min_length  1000;
+        gzip_proxied     any;
+        gzip_types       text/plain application/xml;
+        gzip_disable     "MSIE [1-6] \.";
+
         location ^~ /images/ {
             autoindex on;
         }
