Fix path to .war
svn path=/muse-supervisor/trunk/; revision=37645

--- a/muse-supervisor/hudson.conf
+++ b/muse-supervisor/hudson.conf
@@ -1,6 +1,6 @@
 
 [program:hudson]
-command = java -jar /srv/hudson.war
+command = java -jar /srv/hudson/hudson.war
 process_name = hudson
 directory = /srv/hudson
 priority = 0
