Wtf, why do I need a comma at the end?
svn path=/muse-supervisor/trunk/; revision=37718

--- a/muse-supervisor/hudson.conf
+++ b/muse-supervisor/hudson.conf
@@ -6,4 +6,4 @@ directory = /srv/hudson
 priority = 0
 redirect_stderr = true
 user = hudson
-environment=HOME=/home/hudson
+environment=HOME=/home/hudson,
