Added functionality to redirect crawler traffic to a specific zope instance
svn path=/plone.org/plone01-nginx/trunk/; revision=47842

--- a/plone01-nginx/ssl-plone.org.conf
+++ b/plone01-nginx/ssl-plone.org.conf
@@ -2,8 +2,13 @@
 ## As a temporary measure prior to doing a more in depth change
 ## To support SSL Connectivity to Plone.org
     upstream backend {server 127.0.0.1:5020;}
+    upstream crawler {server 127.0.0.1:5018;}
 
     server {
+	# set a flag if we're serving to a bot
+	if ($http_user_agent ~ (ia_archiver|Yandex|Slurp|Googlebot|Baiduspider|Mediapartners|msnbot|curl|Wget)) {
+		set $is_a_bot 1;
+	}
         listen 443;
         server_name plone.org;
         ssl     on;
@@ -40,24 +45,36 @@
         location = /ie.css {  }
         location ~ /emptypage$ {
             rewrite ^/(.*)$ /VirtualHostBase/https/plone.org:443/plone.org/VirtualHostRoot/$1 break;
+            if ( $is_a_bot = 1 ) {
+		proxy_pass http://crawler;
+	    }
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
         }
         location /_xdv_disabled/ {
             rewrite ^/_xdv_disabled/(.*)$ /VirtualHostBase/https/plone.org:443/plone.org/VirtualHostRoot/$1 break;
+            if ( $is_a_bot = 1 ) {
+		proxy_pass http://crawler;
+	    }
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
         }
         location ~ /(plugins/plone|refbrowser_popup|image_view_fullscreen) {
             rewrite ^/(.*)$ /VirtualHostBase/https/plone.org:443/plone.org/VirtualHostRoot/$1 break;
+            if ( $is_a_bot = 1 ) {
+		proxy_pass http://crawler;
+	    }
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
         }
         location / {
             rewrite ^/(.*)$ /VirtualHostBase/https/plone.org:443/plone.org/VirtualHostRoot/$1 break;
+            if ( $is_a_bot = 1 ) {
+		proxy_pass http://crawler;
+	    }
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
@@ -67,6 +84,9 @@
         }
         location = / {
             rewrite ^/(.*)$ /VirtualHostBase/https/plone.org:443/plone.org/VirtualHostRoot/$1 break;
+            if ( $is_a_bot = 1 ) {
+		proxy_pass http://crawler;
+	    }
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
@@ -76,6 +96,9 @@
         }
         location ~ ^/(products(/psc_view_ploneorg)?|documentation/ndocs|support|frontpage-plone4)/?$ {
             rewrite ^/(.*)$ /VirtualHostBase/https/plone.org:443/plone.org/VirtualHostRoot/$1 break;
+            if ( $is_a_bot = 1 ) {
+		proxy_pass http://crawler;
+	    }
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
