Resolving upstream duplicates in staging vhost configuration
svn path=/plone.org/plone01-nginx/trunk/; revision=48217

--- a/plone01-nginx/ssl-staging.plone.org.conf
+++ b/plone01-nginx/ssl-staging.plone.org.conf
@@ -1,8 +1,8 @@
 ## This file was written by hand by Lars (2010-12-07)
 ## As a temporary measure prior to doing a more in depth change
 ## To support SSL Connectivity to staging.Plone.org
-    upstream backend {server 127.0.0.1:6011;}
-    upstream crawler {server 127.0.0.1:6011;}
+    upstream stagingbackend {server 127.0.0.1:6011;}
+    upstream stagingcrawler {server 127.0.0.1:6011;}
 
     server {
 	# set a flag if we're serving to a bot
@@ -46,36 +46,36 @@
         location ~ /emptypage$ {
             rewrite ^/(.*)$ /VirtualHostBase/https/staging.plone.org:443/plone.org/VirtualHostRoot/$1 break;
             if ( $is_a_bot = 1 ) {
-		proxy_pass http://crawler;
+		proxy_pass http://stagingcrawler;
 	    }
-            proxy_pass http://backend;
+            proxy_pass http://stagingbackend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
         }
         location /_xdv_disabled/ {
             rewrite ^/_xdv_disabled/(.*)$ /VirtualHostBase/https/staging.plone.org:443/plone.org/VirtualHostRoot/$1 break;
             if ( $is_a_bot = 1 ) {
-		proxy_pass http://crawler;
+		proxy_pass http://stagingcrawler;
 	    }
-            proxy_pass http://backend;
+            proxy_pass http://stagingbackend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
         }
         location ~ /(plugins/plone|refbrowser_popup|image_view_fullscreen) {
             rewrite ^/(.*)$ /VirtualHostBase/https/staging.plone.org:443/plone.org/VirtualHostRoot/$1 break;
             if ( $is_a_bot = 1 ) {
-		proxy_pass http://crawler;
+		proxy_pass http://stagingcrawler;
 	    }
-            proxy_pass http://backend;
+            proxy_pass http://stagingbackend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
         }
         location / {
             rewrite ^/(.*)$ /VirtualHostBase/https/staging.plone.org:443/plone.org/VirtualHostRoot/$1 break;
             if ( $is_a_bot = 1 ) {
-		proxy_pass http://crawler;
+		proxy_pass http://stagingcrawler;
 	    }
-            proxy_pass http://backend;
+            proxy_pass http://stagingbackend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
             xslt_stylesheet /srv/staging.plone.org/conf/../etc/default.xsl;
@@ -85,9 +85,9 @@
         location = / {
             rewrite ^/(.*)$ /VirtualHostBase/https/staging.plone.org:443/plone.org/VirtualHostRoot/$1 break;
             if ( $is_a_bot = 1 ) {
-		proxy_pass http://crawler;
+		proxy_pass http://stagingcrawler;
 	    }
-            proxy_pass http://backend;
+            proxy_pass http://stagingbackend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
             xslt_stylesheet /srv/staging.plone.org/conf/../etc/wide.xsl;
@@ -97,9 +97,9 @@
         location ~ ^/(products(/psc_view_ploneorg)?|documentation/ndocs|support|frontpage-plone4)/?$ {
             rewrite ^/(.*)$ /VirtualHostBase/https/staging.plone.org:443/plone.org/VirtualHostRoot/$1 break;
             if ( $is_a_bot = 1 ) {
-		proxy_pass http://crawler;
+		proxy_pass http://stagingcrawler;
 	    }
-            proxy_pass http://backend;
+            proxy_pass http://stagingbackend;
             proxy_set_header Host $host;
             proxy_set_header X-XDV "true";
             xslt_stylesheet /srv/staging.plone.org/conf/../etc/wide.xsl;
